WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79539
[chromium] WebKit::setColorNames is a client API
https://bugs.webkit.org/show_bug.cgi?id=79539
Summary
[chromium] WebKit::setColorNames is a client API
James Robinson
Reported
2012-02-24 15:43:54 PST
[chromium] WebKit::setColorNames is a client API
Attachments
Patch
(10.66 KB, patch)
2012-02-24 15:44 PST
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(20.15 KB, patch)
2012-02-24 15:50 PST
,
James Robinson
fishd
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-02-24 15:44:22 PST
Created
attachment 128819
[details]
Patch
James Robinson
Comment 2
2012-02-24 15:45:54 PST
I moved WebColor into Platform/ since it's needed for some compositor APIs, but upon reflection WebKit::setNamedColors is really logically a client API. This moves setNamedColors and the WebColorName enums back into the client space. I can update the chromium headers as a follow-up and then remove the platform/WebColorName.h forwarding header. I think WebColor as a typedef for unsigned should remain in both APIs.
James Robinson
Comment 3
2012-02-24 15:48:05 PST
Actually, I should probably move the setNamedColors() impl from WebColor.cpp to WebColorName.cpp if I do this. Will update patch...
James Robinson
Comment 4
2012-02-24 15:50:21 PST
Created
attachment 128820
[details]
Patch
James Robinson
Comment 5
2012-02-24 15:58:38 PST
Committed
r108860
: <
http://trac.webkit.org/changeset/108860
>
Adrienne Walker
Comment 6
2012-02-24 16:23:49 PST
Rolled out in
r108865
. From
http://build.chromium.org/p/chromium.webkit/builders/Linux%20Tests/builds/18924/steps/compile/logs/stdio
: --SNIP-- CXX(target) out/Release/obj.target/content_common/content/common/swapped_out_messages.o In file included from ./third_party/WebKit/Source/WebKit/chromium/public/platform/WebColorName.h:29, from ./content/common/css_colors.h:13, from ./content/common/view_messages.h:11, from content/browser/resolve_proxy_msg_helper.cc:10: ./third_party/WebKit/Source/WebKit/chromium/public/platform/../WebColorName.h:34:29:error: public/WebColor.h: No such file or directory ./third_party/WebKit/Source/WebKit/chromium/public/platform/../WebColorName.h:35:30:error: public/WebCommon.h: No such file or directory --SNIP--
James Robinson
Comment 7
2012-02-24 16:27:30 PST
Code on the chromium side that #inclues WebColorName.h depends on the WebKit client API but not the Platform API, so it doesn't have the Platform API's include paths. I think the fix is to use full relative include paths like "../../../Platform/chromium/public/WebColor.h" in WebKit/chromium/public/WebColorName.h or to jigger the dependencies around so that every target that depends on the WebKit client API also has the Platform API's include paths.
James Robinson
Comment 8
2012-02-24 17:57:13 PST
Committed
r108877
: <
http://trac.webkit.org/changeset/108877
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug