[chromium] WebKit::setColorNames is a client API https://bugs.webkit.org/show_bug.cgi?id=79539

Reviewed by Darin Fisher.

Source/Platform:

* Platform.gypi:
* chromium/public/WebColor.h:
(WebKit):

Source/WebKit/chromium:

* WebKit.gyp:
* public/WebColorName.h: Renamed from Source/Platform/chromium/public/WebColorName.h.
(WebKit):
* public/platform/WebColorName.h:
* src/WebColor.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@108860 bbb929c8-8fbe-4397-9dbb-9b2b20218538