third_party/WebKit/Source/WebKit/chromium/public/WebColorName.h
@@ -32,6 +32,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WebColorName_h
 #define WebColorName_h
 
+#include <public/WebColor.h>
+#include <public/WebCommon.h>
+
 namespace WebKit {
 
 enum WebColorName {
@@ -67,6 +70,9 @@ enum WebColorName {
     WebColorWindowText
 };
 
-}  // namespace WebKit
+// Sets the values of a set of named colors.
+WEBKIT_EXPORT void setNamedColors(const WebColorName*, const WebColor*, size_t length);
+
+} // namespace WebKit
 
 #endif
