third_party/WebKit/Source/WebKit/chromium/src/WebColorName.cpp
@@ -30,21 +30,21 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  */
 
 #include "config.h"
-#include "platform/WebColor.h"
+#include "WebColorName.h"
 
-#include "Color.h"
 #include "CSSValueKeywords.h"
+#include "Color.h"
 #include "RenderTheme.h"
 #include "UnusedParam.h"
-#include "platform/WebColorName.h"
+#include <public/WebColor.h>
 
 using namespace::WebCore;
 
 namespace WebKit {
 
-static int toCSSValueKeyword(WebColorName in_value)
+static int toCSSValueKeyword(WebColorName name)
 {
-    switch (in_value) {
+    switch (name) {
     case WebColorActiveBorder:
         return CSSValueActiveborder;
     case WebColorActiveCaption:
